Fix code cov (#156)
* Ignore hpc

* Use forked branch avoid codecov-haskell error

* Using copy-bins

* Set mix, tix dir

* Style adjustments on .travis.yml  [changelog skip]

* codecov-haskell command is not installed

[changelog skip]

* Fix the way to install codecov-haskell

[changelog skip]

* Specify upload token [changelog skip]

* codecov-haskell doesn't work on Windows/AppVeyor

[changelog skip]

--- a/stack.yaml
+++ b/stack.yaml
@@ -4,4 +4,5 @@ packages:
 - '.'
 extra-deps:
 - uri-0.1.6.4
+## INSERT CODECOV HERE -- DO NOT REMOTE THIS COMMENT. SEE ALSO ISSUE #156. ##
 extra-package-dbs: []
