--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,12 +13,12 @@ install:
 - dir C:\
 - set
 
-- ps: Invoke-WebRequest -OutFile C:\upx391w.zip http://upx.sourceforge.net/download/upx391w.zip
-- 7z x -oC:\ C:\upx391w.zip
+- ps: Invoke-WebRequest -OutFile C:\upx394w.zip https://github.com/upx/upx/releases/download/v3.94/upx394w.zip
+- 7z x -oC:\ C:\upx394w.zip
 - ps: set LANG=en_US
 - ps: ls C:\
-- ps: ls C:\upx391w
-- ps: $env:PATH = 'C:\upx391w;' + $env:PATH;
+- ps: ls C:\upx394w
+- ps: $env:PATH = 'C:\upx394w;' + $env:PATH;
 - ps: >
     if((Test-Path $env:STACK_ROOT) -ne $true) {
       if($env:PLATFORM -eq 'x86') {
