Entry points to discover generated modules/classes

--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ deps =
 commands =
     pip install -f {distdir} -e {distdir}/nirum_fixture
     flake8 test/python
-    pytest {posargs:--ff -vv -s} test/python
+    pytest {posargs:--ff -vv} test/python
 
 [testenv:buildfixture]
 skip_install = true
