Make generated Python codes free from validate_*

--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,7 @@ deps =
     six
     flake8
     pytest
+    py27: python-dateutil
 commands =
     pip install -f {distdir} -e {distdir}/nirum_fixture
     flake8 test/python
