Fix unexpected runtime TypeError due to shadowing

--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -55,6 +55,7 @@
     within:
     - Nirum.Parser
     - Nirum.ParserSpec
+    - Nirum.Targets.Python.CodeGenSpec
 - ignore: {name: Unnecessary hiding}
 
 
