--- a/examples/package.toml
+++ b/examples/package.toml
@@ -1,5 +1,8 @@
 version = "0.3.0"
 
+[targets.elm]
+repository = "https://github.com/spoqa/nirum-examples-elm.git"  # fake
+
 [targets.python]
 name = "nirum-examples"
 minimum_runtime = "0.3.9"
