--- a/package.yaml
+++ b/package.yaml
@@ -69,6 +69,8 @@ library:
   other-modules:
   - Paths_nirum
   dependencies:
+  - aeson >=1.2.4.0 && <1.3.0.0
+  - aeson-pretty >=0.8.5 && <0.9.0
   - blaze-markup >=0.8.0.0 && <0.9
   - cmark >=0.5 && <0.6
   - fsnotify >=0.2.1 && <0.3.0
