--- a/package.yaml
+++ b/package.yaml
@@ -137,6 +137,7 @@ tests:
     - hspec
     - hspec-core
     - hspec-meta
+    - hxt >=9.3.1.16 && <9.4.0.0
     - nirum
     - process >=1.1 && <2
     - semigroups
