Travis CI's trusy image lacks netbase by default
https://github.com/commercialhaskell/stack/issues/2372#issuecomment-234113085

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ matrix:
         - libgmp10
         - upx-ucl
         - shellcheck
+        - netbase
 
 env:
 - PIP_MINVER=9.0.1 SETUPTOOLS_MINVER=36.6.0
