Checkmate requires libgnutls30 as well
https://www.kuznero.com/posts/haskell/building-statically-linked-binaries.html#no-such-protocol-name-tcp-error

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ matrix:
         - upx-ucl
         - shellcheck
         - netbase
+        - ca-certificates
+        - libgnutls30
 
 env:
 - PIP_MINVER=9.0.1 SETUPTOOLS_MINVER=36.6.0
