Explicit S3 region  [changelog skip]

--- a/.travis.yml
+++ b/.travis.yml
@@ -180,6 +180,7 @@ deploy:
   bucket: nightly-builds.nirum.org
   access_key_id: "$AWS_ACCESS_KEY_ID"
   secret_access_key: "$AWS_SECRET_ACCESS_KEY"
+  region: us-east-1
 
 # GitHub Releases
 - provider: releases
