--- a/package.yaml
+++ b/package.yaml
@@ -44,6 +44,8 @@ when:
     - -optP-Wno-nonportable-include-path
     # The above option works around https://github.com/haskell/cabal/issues/4739
 dependencies:
+- aeson >=1.0.2.1 && <2
+- aeson-pretty >= 0.8.2 && <0.9
 - base >=4.7 && <5
 - blaze-html >=0.9.0.1 && <0.10
 - bytestring
