--- a/package.yaml
+++ b/package.yaml
@@ -70,7 +70,7 @@ library:
   - Paths_nirum
   dependencies:
   - blaze-markup >=0.8.0.0 && <0.9
-  - cmark >=0.5 && <0.6
+  - cmark-gfm >=0.1.3 && <0.2
   - fsnotify >=0.2.1 && <0.3.0
   - heterocephalus >=1.0.5 && <1.1.0
   - optparse-applicative >=0.14 && <0.15
