--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ matrix:
         - python3.4
         - python3.5
         - python3.6
+        - python3.7
         - libgmp10
         - upx-ucl
         - shellcheck
